--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 html, body {
-	margin: 0;	
-	padding: 0;
+	/* margin: 0;	
+	padding: 0; */
+  width: 100%;
+  height: 100%;
 }
 
 body {
-	background: #171717;
+	background: #000000;
 	color: #999;
 	font: 100%/18px helvetica, arial, sans-serif;
 }
@@ -19,18 +21,61 @@ a:hover {
 	color: #fff;	
 }
 
-#canvas-container {
-	background: #000 url(https://jackrugile.com/lab/fireworks-v2/images/bg.jpg);
-  height: 400px;
+.hover{
+	position: relative; /*设置为相对定位*/
+}
+
+.hover:before{
+	content: "hhhhhhhh"; /*清空伪元素内容*/
+	position: absolute; /*设置为绝对定位*/
+	top: 100%; /*将其移出父容器*/
+	left: 0; /*在左侧*/
+	opacity: 0; /*初始透明度为0*/
+	width: 100%; /*与父容器同宽*/
+	background-color: #dee55d; /*设置背景颜色*/
+	color: #d555f1; /*设置文字颜色*/
+	padding: 10px; /*设置内边距*/
+	transform: translateY(-10px); /*向上移动10像素*/
+	transition: all 0.3s ease-in-out; /*设置过渡效果*/
+	}
+	.hover:hover:before{
+	opacity: 1; /*鼠标悬浮时透明度为1*/
+	transform: translateY(0); /*移动位置为0*/
+}
+
+.bg-img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: url("http://unsplash.it/1200x800") center center no-repeat;
+  background-size: cover;
+	z-index: 1;
+}
+.bg-img:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(to bottom right, #075c8e, #dc2556);
+  opacity: 0.8;
+	z-index: 1;
+}
+
+/* #canvas-container {
+	background-image: url('./images/test.jpg');
+  height: 700px;
 	left: 50%;
 	margin: -200px 0 0 -300px;
 	position: absolute;
 	top: 50%;
   width: 600px;
 	z-index: 2;
-}
+} */
 		
 canvas {
+	background-image: url('./images/test.jpg');
 	cursor: crosshair;
 	display: block;
 	position: relative;
@@ -39,41 +84,40 @@ canvas {
 
 canvas:active {
 	cursor: crosshair;
-}
-
-#skyline {
-	background: url(https://jackrugile.com/lab/fireworks-v2/images/skyline.png) repeat-x 50% 0;
-	bottom: 0;
-	height: 135px;
-	left: 0;
-	position: absolute;
-	width: 100%;
-	z-index: 1;	
-}
-
-#mountains1 {
-	background: url(https://jackrugile.com/lab/fireworks-v2/images/mountains1.png) repeat-x 40% 0;
-	bottom: 0;
-	height: 200px;
-	left: 0;
-	position: absolute;
-	width: 100%;
-	z-index: 1;	
-}
-
-#mountains2 {
-	background: url(https://jackrugile.com/lab/fireworks-v2/images/mountains2.png) repeat-x 30% 0;
-	bottom: 0;
-	height: 250px;
-	left: 0;
-	position: absolute;
-	width: 100%;
-	z-index: 1;	
-}
-
-#gui {
-	right: 0;
-	position: fixed;
-	top: 0;
 	z-index: 3;
 }
+
+#fire {
+	margin: 30px;
+	text-shadow: 0 0 5px #fff, 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+	font-size: 60px;
+
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-family: "Source Sans Pro";
+  font-size: 5em;
+  font-weight: 900;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#neon {
+	margin: 30px;
+	text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #6AB5FF, 0 0 70px #6AB5FF, 0 0 80px #6AB5FF, 0 0 100px #6AB5FF, 0 0 150px #6AB5FF;
+	font-size: 60px;
+
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-family: "Source Sans Pro";
+  font-size: 5em;
+  font-weight: 900;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
