--- a/style.css
+++ b/style.css
@@ -6,9 +6,29 @@ html, body {
 }
 
 body {
-	background: #000000;
+	/* background: #000000;
 	color: #999;
-	font: 100%/18px helvetica, arial, sans-serif;
+	font: 100%/18px helvetica, arial, sans-serif; */
+
+	position: center;
+	width: 100%;
+	height: 600%;
+	background: url("http://unsplash.it/1200x800") center center no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+body::before{
+	content: "";
+	position: absolute;
+	/* position: relative; */
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-image: linear-gradient(to bottom right, #075c8e, #dc2556);
+	background-attachment: fixed;
+	opacity: 0.8;
 }
 
 a {
@@ -19,6 +39,127 @@ a {
 
 a:hover {
 	color: #fff;	
+}
+
+.song {
+	/* display: none; */
+	position: absolute;
+
+	left: 0px;
+
+	z-index: 2;
+}
+
+
+.cat1 {
+	background-image: url('./images/Clipped_image_20231028_153702.png');
+  height: 562px;
+  width: 491px;
+	left: 70px;
+	background-size: 100% 100%;
+	/* margin: -200px 0 0 -300px; */
+	position: absolute;
+	top: 20px;
+
+	z-index: 2;
+}
+
+.cat1:before{
+	font-family: "Source Sans Pro";
+	content: "我是锅巴，祝你生日快乐哟！喵喵喵！"; /*清空伪元素内容*/
+	position: absolute; /*设置为绝对定位*/
+	top: 100%; /*将其移出父容器*/
+	left: 0; /*在左侧*/
+	opacity: 0; /*初始透明度为0*/
+	width: 100%; /*与父容器同宽*/
+	background-color: #dee55d; /*设置背景颜色*/
+	color: #d555f1; /*设置文字颜色*/
+	padding: 10px; /*设置内边距*/
+	transform: translateY(-10px); /*向上移动10像素*/
+	transition: all 0.3s ease-in-out; /*设置过渡效果*/
+	}
+	.cat1:hover:before{
+	opacity: 1; /*鼠标悬浮时透明度为1*/
+	transform: translateY(0); /*移动位置为0*/
+}
+
+
+.dog {
+	background-image: url('./images/Clipped_image_20231028_153951.png');
+  height: 464px;
+  width: 487px;
+	left: 1500px;
+	background-size: 100% 100%;
+	/* margin: -200px 0 0 -300px; */
+	position: absolute;
+	top: 30px;
+
+	z-index: 2;
+}
+
+.dog:before{
+	font-family: "Source Sans Pro";
+	content: "我是大和，祝你生日快乐哟！汪汪汪！"; /*清空伪元素内容*/
+	position: absolute; /*设置为绝对定位*/
+	top: 100%; /*将其移出父容器*/
+	left: 0; /*在左侧*/
+	opacity: 0; /*初始透明度为0*/
+	width: 100%; /*与父容器同宽*/
+	background-color: #dee55d; /*设置背景颜色*/
+	color: #d555f1; /*设置文字颜色*/
+	padding: 10px; /*设置内边距*/
+	transform: translateY(-10px); /*向上移动10像素*/
+	transition: all 0.3s ease-in-out; /*设置过渡效果*/
+	}
+	.dog:hover:before{
+	opacity: 1; /*鼠标悬浮时透明度为1*/
+	transform: translateY(0); /*移动位置为0*/
+}
+
+.kevin {
+	background-image: url('./images/Clipped_image_20231029_122947.png');
+  height: 516px;
+  width: 448px;
+	left: 200px;
+	background-size: 100% 100%;
+	/* margin: -200px 0 0 -300px; */
+	position: absolute;
+	top: 1100px;
+
+	z-index: 2;
+}
+
+.kevin:before{
+	font-family: "Source Sans Pro";
+	content: "我是kevin，祝宝贝生日快乐！我爱你哟！"; /*清空伪元素内容*/
+	position: absolute; /*设置为绝对定位*/
+	top: 100%; /*将其移出父容器*/
+	left: 0; /*在左侧*/
+	opacity: 0; /*初始透明度为0*/
+	width: 100%; /*与父容器同宽*/
+	background-color: #dee55d; /*设置背景颜色*/
+	color: #d555f1; /*设置文字颜色*/
+	padding: 10px; /*设置内边距*/
+	transform: translateY(-10px); /*向上移动10像素*/
+	transition: all 0.3s ease-in-out; /*设置过渡效果*/
+	}
+	.kevin:hover:before{
+	opacity: 1; /*鼠标悬浮时透明度为1*/
+	transform: translateY(0); /*移动位置为0*/
+}
+
+
+.eggcat {
+	background-image: url('./images/mmexport1698570053819.png');
+  height: 500px;
+  width: 500px;
+	left: 750px;
+	background-size: 100% 100%;
+	/* margin: -200px 0 0 -300px; */
+	position: absolute;
+	top: 5550px;
+
+	z-index: 2;
 }
 
 .hover{
@@ -43,13 +184,15 @@ a:hover {
 	transform: translateY(0); /*移动位置为0*/
 }
 
-.bg-img {
-  position: relative;
+/* .bg-img {
+  position: center;
   width: 100%;
-  height: 100%;
+  height: auto;
   background: url("http://unsplash.it/1200x800") center center no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 	z-index: 1;
+	
 }
 .bg-img:before {
   content: "";
@@ -59,9 +202,10 @@ a:hover {
   bottom: 0;
   left: 0;
   background-image: linear-gradient(to bottom right, #075c8e, #dc2556);
+  background-attachment: fixed;
   opacity: 0.8;
 	z-index: 1;
-}
+} */
 
 /* #canvas-container {
 	background-image: url('./images/test.jpg');
@@ -75,10 +219,15 @@ a:hover {
 } */
 		
 canvas {
-	background-image: url('./images/test.jpg');
+	/* background-image: url('./images/test.jpg'); */
+	background-color: hsl(0, 0%, 0%);
 	cursor: crosshair;
 	display: block;
 	position: relative;
+	top: 3000px;
+	left: 0px;
+	height: auto;
+	width: 100%;
 	z-index: 3;
 }
 
@@ -88,35 +237,55 @@ canvas:active {
 }
 
 #fire {
-	margin: 30px;
+	position: absolute;
+	margin: 0px;
 	text-shadow: 0 0 5px #fff, 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-	font-size: 60px;
+	text-wrap: nowrap;
+  text-align: right;
+  top: 2400px;
+  left: 1050px;
 
-  position: absolute;
-  top: 20%;
-  left: 50%;
   transform: translate(-50%, -50%);
   color: #fff;
   font-family: "Source Sans Pro";
-  font-size: 5em;
+  font-size: 8em;
   font-weight: 900;
-  -webkit-user-select: none;
-  user-select: none;
+  /* -webkit-user-select: none;
+  user-select: none; */
 }
 
 #neon {
 	margin: 30px;
-	text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #6AB5FF, 0 0 70px #6AB5FF, 0 0 80px #6AB5FF, 0 0 100px #6AB5FF, 0 0 150px #6AB5FF;
+	text-shadow: 0 0 9px #fff, 0 0 20px #a4f6f3, 0 0 30px #fff, 0 0 40px #6AB5FF, 0 0 70px #6AB5FF, 0 0 80px #6AB5FF, 0 0 100px #6AB5FF, 0 0 150px #6AB5FF;
 	font-size: 60px;
-
+	text-align: right;
+	text-wrap: nowrap;
   position: absolute;
-  top: 20%;
-  left: 50%;
+  top: 4350px;
+  left: 1050px;
   transform: translate(-50%, -50%);
   color: #fff;
   font-family: "Source Sans Pro";
   font-size: 5em;
-  font-weight: 900;
+  font-weight: 800;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#neon2 {
+	margin: 30px;
+	text-shadow: 0 0 9px #fff, 0 0 20px #a4f6f3, 0 0 30px #fff, 0 0 40px #6AB5FF, 0 0 70px #6AB5FF, 0 0 80px #6AB5FF, 0 0 100px #6AB5FF, 0 0 150px #6AB5FF;
+	font-size: 60px;
+	text-align: right;
+	text-wrap: nowrap;
+  position: absolute;
+  top: 5300px;
+  left: 1000px;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-family: "Source Sans Pro";
+  font-size: 5em;
+  font-weight: 800;
   -webkit-user-select: none;
   user-select: none;
 }
