--- a/style_cake.css
+++ b/style_cake.css
@@ -40,58 +40,31 @@ body {
 	z-index: 4;
 } */
 
-.challenge-subtitle {
-  text-align: center;
-  margin: 0;
-  font-size: 1.125rem;
-  font-weight: 400;
-  color: #117c23;
-}
-
-.challenge-part-of {
-  text-align: center;
-  margin: 1rem 0 0;
-  font-size: 0.875rem;
-  color: #b5bbc3;
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-}
-.challenge-part-of a,
-.challenge-part-of a:visited {
-  color: #b5bbc3;
-  -webkit-text-decoration-style: wavy;
-          text-decoration-style: wavy;
-}
-.challenge-part-of a:hover, .challenge-part-of a:active,
-.challenge-part-of a:visited:hover,
-.challenge-part-of a:visited:active {
-  color: #d1d5da;
-}
-
 .hb-container {
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   position: absolute;
-  top: 20%;
-  left: 50%;
+  /* top: 20%; */
+  top: 250px;
+  left: 40%;
 	z-index: 2;
+  font-family: "Londrina Solid", cursive;
 }
 .hb-container .happy {
-  font-size: 8rem;
-  color: white;
-  font-weight: 100;
+  font-size: 10rem;
+  color: rgb(246, 86, 120);
+  font-weight: 200;
   transform: translateY(-85px);
-  padding: 1rem 0;
-  background-color: #0d1117;
+  padding: 2rem 0;
+  /* background-color: #0d1117; */
   -webkit-animation: showUp 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
           animation: showUp 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
 }
 .hb-container .twentyseven {
   font-size: 10rem;
-  color: #1f2938;
+  color: #334259;
   font-weight: 900;
   -webkit-animation: blinkColor 2s cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite forwards 0.7s;
           animation: blinkColor 2s cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite forwards 0.7s;
@@ -99,9 +72,9 @@ body {
 }
 .hb-container .birthday {
   font-size: 5.5rem;
-  color: white;
+  color: rgb(248, 237, 23);
   transform: translateY(-85px);
-  background-color: #0d1117;
+  /* background-color: #0d1117; */
   padding: 1rem 0;
   -webkit-animation: showDown 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards 0.4s;
           animation: showDown 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards 0.4s;
@@ -155,19 +128,6 @@ body {
   fill: #e500a4;
 }
 
-.birthday-cake {
-  margin: 1rem 0;
-}
-.birthday-cake svg {
-  width: 200px;
-  height: 200px;
-  fill: transparent;
-  stroke: #6eeb83;
-  stroke-width: 4px;
-  stroke-dasharray: 5000;
-  stroke-dashoffset: 5000;
-}
-
 @-webkit-keyframes showUp {
   from {
     transform: translateY(85px);
@@ -187,45 +147,45 @@ body {
 }
 @-webkit-keyframes blinkColor {
   78% {
-    color: #6eeb83;
-    text-shadow: 0 0 10px #6eeb83;
+    color: #51a9f6;
+    text-shadow: 0 0 10px #d8510e;
   }
   79% {
-    color: #1f2938;
-    text-shadow: 0 0 1px #117c23;
+    color: #111a27;
+    text-shadow: 0 0 1px #dd9702;
   }
   81% {
-    color: #6eeb83;
-    text-shadow: 0 0 10px #6eeb83;
+    color: #60adec;
+    text-shadow: 0 0 10px #db9d03;
   }
   82% {
     color: #1f2938;
-    text-shadow: 0 0 1px #117c23;
+    text-shadow: 0 0 1px #d99f0a;
   }
   83% {
-    color: #6eeb83;
-    text-shadow: 0 0 10px #6eeb83;
+    color: #56b6ed;
+    text-shadow: 0 0 10px #dc9c06;
   }
   92% {
     color: #1f2938;
-    text-shadow: 0 0 1px #117c23;
+    text-shadow: 0 0 1px #dba00b;
   }
   92.5% {
-    color: #6eeb83;
-    text-shadow: 0 0 10px #6eeb83;
+    color: #648cea;
+    text-shadow: 0 0 10px #d89205;
   }
 }
 @keyframes blinkColor {
   78% {
-    color: #6eeb83;
-    text-shadow: 0 0 10px #6eeb83;
+    color: #51f556;
+    text-shadow: 0 0 10px #a6f43f;
   }
   79% {
     color: #1f2938;
     text-shadow: 0 0 1px #117c23;
   }
   81% {
-    color: #6eeb83;
+    color: #ee3e04;
     text-shadow: 0 0 10px #6eeb83;
   }
   82% {
@@ -233,7 +193,7 @@ body {
     text-shadow: 0 0 1px #117c23;
   }
   83% {
-    color: #6eeb83;
+    color: #f26b4a;
     text-shadow: 0 0 10px #6eeb83;
   }
   92% {
@@ -241,7 +201,7 @@ body {
     text-shadow: 0 0 1px #117c23;
   }
   92.5% {
-    color: #6eeb83;
+    color: #d3ee5d;
     text-shadow: 0 0 10px #6eeb83;
   }
 }
