--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 	position: center;
 	width: 100%;
-	height: 600%;
+	height: 630%;
 	background: url("http://unsplash.it/1200x800") center center no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -42,11 +42,10 @@ a:hover {
 }
 
 .song {
-	display: none;
+	/* display: none; */
 	position: absolute;
-	top: 100%;
-	left: 85%;
-
+	top: 6350px;
+	left: 1650px;
 	z-index: 2;
 }
 
